# text_technology

./: .gitignore  README.md  app.db  application.py  config.py  docker-compose.yaml  mariadb_es_repo_setup  verona.db
app/: .dockerignore  Dockerfile  __init__.py  app.py  models.py  requirements.txt
app/templates/: base.html  start.html
app/templates/queries/: act.html  cast_group.html  cast_role.html  line.html  scene.html  speech.html  token.html
app/templates/results/: act.html  cast_group.html  cast_role.html  line.html  scene.html  speech.html  token.html
app/views/: main_views.py  query_views.py  result_views.py
example_queries/: cast_in_act1.sql  lines_of_valentine.sql
ingestion/: .dockerignore  Dockerfile  README.md  app.py  local_parse.py  pyproject.toml  requirements.txt  test_parse.py
ingestion/ingestion/: database_connector.py  tei_sql_schema.py  tei_xml_parser.py
ingestion/openapi/: ingestion_schema.yaml
migrations/versions/: 4ed23ce9b57c_.py
templates/: base.html  main.html  result.html
