[tool.poetry]
name = "tt_ingestion"
version = "0.1.0"
description = "ETL pipeline for text technology project."
authors = ["chris <chris.schaller@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.8"
mariadb = "^1.0.9"
python-dotenv = "^0.19.2"
lxml = "^4.7.1"
connexion = "^2.9.0"
SQLAlchemy = "^1.4.29"

[tool.poetry.dev-dependencies]
pandas = "^1.3.5"
ipykernel = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
